--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
     "react-dom": "^18",
     "react-hook-form": "^7.53.1",
     "react-syntax-highlighter": "^15.6.1",
+    "sharp": "^0.33.5",
     "stripe": "^17.3.1",
     "superjson": "^2.2.1",
     "tailwind-merge": "^2.5.4",
